src/scss/botchat.scss
/* ... */
#BotChatWindow {
    width: 100%;
    height: 100%;
}

// Login form

#loginForm {
    position: fixed;
    height: 100%;
    width: 100%;
    background-color: $c_brand;

    fieldset {
        border-width: 0px;
        width: 640px;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        background-color: #fff;
        padding: 0px;

        * {
            box-sizing: border-box;
        }
    }

    ul {
        padding: 0px;
        margin: 0px;
        font-size: 16px;
        list-style-type: none;
        font-family: 'Lato', sans-serif;
        text-align: center;
        font-size: 14px;

        h1 {
            margin-top: 80px;
            font-size: 30px;
            color: $c_brand;
            position: relative;

            &:before{
                content: "";
                position: absolute;
                width: 50px;
                height: 1px;
                bottom: -5px;
                left: 50%;
                transform: translateX(-50%);
                border-bottom: 2px solid $c_brand_two;
            }
        }

        li {
            position: relative;

            .error {
                color: $c_primary_text;
                font-size: 14px;
                padding-top: 0px;
                display: initial;
            }

            input {
                padding: 10px 15px;
                margin: 15px 30px;
                width: 580px;
                height: 41px;
                font-size: 17px;
            }


            label {
                display: none;
            }

            button {
                text-transform: uppercase;
                margin: 35px auto 80px auto;
                height: 50px;
                padding: 0 20px;
                border-radius: 25px;
                color: #fff;
                background-color: $c_button_background;
                border: none;

                &:hover, &:active {
                    background-color: $c_button_background_onpress;
                }
            }
        }
    }
}

.wc-header {
    display: flex;
    align-items: center;
    padding: 10px 17px;
    flex-wrap: wrap;

    img {
        max-height: 100%;
        margin-right: 10px;
    }

    .subtext {
        width: 100%;
        color: $c_brand_light;
    }
}

.wc-message-meta {
    clear: both;
    // color: #7ba1ab;
    font-size: 13px;
    font-weight: 300;
    padding-top: 5px;
}

h2 {
    font-size: 30px;
    line-height: 1.1;
}

